[package]
name = "harperdb-test"
version = "0.1.0"
authors = ["rymnc <43716372+rymnc@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0"
harperdb = "1.0.0"
serde = { version = "1.0.115", features = ["derive"] }
